v18.0.0.2 - bunch of maintainability updates - some minor performance improvements